--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>RPS</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" href="/icon.png">
-  </head>
-
-  <body>
-
-    <%= yield %>
-  </body>
-</html>
+# <html>
+#   <head>
+#     <title>RPS</title>
+#     <meta charset="utf-8">
+#     <meta name="viewport" content="width=device-width,initial-scale=1">
+#     <%= csrf_meta_tags %>
+#     <%= csp_meta_tag %>
+#     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+#     <%= javascript_importmap_tags %>
+#     <link rel="icon" href="/icon.png">
+#     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+#   </head>
+#   <body class="pico">
+#     <div class="container">
+#       <header>
+#         <nav>
+#           <ul>
+#             <li>
+#               <%= link_to "Play Rock", rock_path %>
+#             </li>
+#             <li>
+#               <%= link_to "Play Paper", paper_path %>
+#             </li>
+#             <li>
+#               <%= link_to "Play Scissors", scissors_path %>
+#             </li>
+#           </ul>
+#         </nav>
+#       </header>
+#       
+#       <main>
+#         <%= yield %>
+#       </main>
+#     </div>
+#   </body>
+# </html>
